--- a/my_card/src/Components/Header/cards/code.css
+++ b/my_card/src/Components/Header/cards/code.css
@@ -1,40 +1,114 @@
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+    margin: 0;padding: 0;box-sizing: border-box;
 }
-.card-box{
+
+.container{
+    min-height: 100vh;
+    width:100% ;
+    background-color: black;
     display: flex;
-    position: relative;
-    background:linear-gradient();
-    height: 210px;
-    width: 35rem;
-    padding: 1rem;
-    margin: 123px 34px 34px 165px;
-    border-radius: 23px;
-    /* color: black; */
-
-
+    align-items: center;
+    justify-content: center;
+    background-image: url(../../../Images/bgr.png);
+    background-repeat: no-repeat;
+    background-position: 4px;
 }
 
-.card-box h1{
-    color: rgb(62, 60, 60);
-    margin-left: 23px;
-    font-weight: 400;
-    font-style:oblique;
-    font-display:initial;
-    text-shadow: 2rem;
-
-
-}
-
-.card-box .image-block img{
-    display: block; 
-     position: relative;
-    width: 3rem;
-    margin-top: 0.7em;
-    margin-left: 12rem;
-    border-radius: 34px;
-
+/* for front front Css:::::::::::::::::: */
+.card{
+    width: 500px;
+    height: 300px;
+    color: rgb(244, 246, 248);
+    cursor: pointer;
+    
     
 }
+
+.card-face{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    
+}
+
+.f-box{
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(45deg,black,rgb(15, 15, 15));
+    position: relative;
+    top: 0;
+    left: 0;
+    padding: 2rem;
+    border-radius: 1rem;
+    overflow:hidden ;
+    z-index: 1;
+    backface-visibility: hidden;
+    
+
+}
+
+.data{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    
+
+}
+
+.back-img{
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0.3;
+    z-index: -2;
+}
+
+.card-nm{
+    font-size: 1.7rem;
+    margin-top: 20px;
+    margin-left: 12px;
+    letter-spacing: 2px;
+    
+}
+
+.bank-card{
+    margin-top: 7px;
+    letter-spacing: 10px;
+    font-size: 12px;
+    justify-content: center;
+    font-weight: 100;
+    text-transform: uppercase;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.base-card{
+    margin-top: 30px;
+    letter-spacing: 0.2em;
+    font-weight: 500;
+    font-size: x-small;
+    margin-left: 12px;
+}
+
+.holder-name{
+    margin: 12px;
+    font-size: 9px;
+    margin-left: 30px;
+
+}
+.lnc-card{
+    margin-left: 34px;
+    margin-top: 22px;
+    justify-content: center;
+    font-size: xx-small;
+}
+.strong-text{
+    color: aqua;
+    font-weight: bolder;
+    font-size: 14px;
+}
+
+
+
+ 
